--- a/src/pages/AboutUS/AboutUS.css
+++ b/src/pages/AboutUS/AboutUS.css
@@ -9,7 +9,7 @@
   text-align: center;
 }
 
-embed {
+/* embed {
   display: none;
 }
 
@@ -19,7 +19,7 @@ canvas {
   background-size: cover;
   width: 100%;
   height: 100%;
-}
+} */
 
 @-webkit-keyframes snowflakes-fall {
   0% {
